add jenkins file avec changement sur index.html 2

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Bonjour II-BDCC3 data pipeline avec jenkins File Avec Changement</h1>
     <p> SADIQ Mohamed Amine</p>
+
+    <h2>TP DEVOPS 2 </h2>
 </body>
 </html>
